# nonebot-plugin-treehelp

./: .env.prod  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codecov.yml  release.yml
nonebot_plugin_treehelp/: __init__.py  config.py  data_source.py
tests/: conftest.py  test_adapters.py  test_help.py  test_ignored.py  test_nested.py  test_platform.py  test_tree.py
tests/plugins/adapters/: __init__.py
tests/plugins/adapters/plugins/: sub1.py  sub2.py  sub3.py  sub4.py  sub5.py
tests/plugins/nested/: __init__.py
tests/plugins/nested/plugins/: sub1.py  sub2.py
tests/plugins/platform/plugins/: sub1.py
tests/plugins/tree/: __init__.py  config.py
tests/plugins/tree/plugins/: alc.py  simple.py
tests/plugins/tree/plugins/sub/: __init__.py
tests/plugins/tree/plugins/sub/subsub/: sub2.py
