[project]
name = "nonebot-plugin-treehelp"
version = "0.5.0"
description = "适用于 Nonebot2 的树形帮助插件"
authors = [{ name = "uy_sun", email = "hmy0119@gmail.com" }]
dependencies = ["nonebot2>=2.2.0"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/he0119/nonebot-plugin-treehelp"
Repository = "https://github.com/he0119/nonebot-plugin-treehelp.git"
Issues = "https://github.com/he0119/nonebot-plugin-treehelp/issues"
Changelog = "https://github.com/he0119/nonebot-plugin-treehelp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
alconna = ["nonebot-plugin-alconna>=0.49.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_treehelp"]

[tool.hatch.build.targets.sdist]
only-include = ["nonebot_plugin_treehelp"]

[tool.rye]
managed = true
universal = true
dev-dependencies = [
    "nonebug>=0.3.7",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
    "nonebot2[fastapi]>=2.3.2",
    "nonebot-adapter-onebot>=2.4.4",
    "nonebot-adapter-console>=0.5.0",
    "nonebot-plugin-alconna>=0.49.0",
]

[tool.rye.scripts]
test = "pytest --cov=nonebot_plugin_treehelp --cov-report xml -n auto"

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
]
ignore = [
    "E402", # module-import-not-at-top-of-file
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_treehelp", "tests.plugins.tree"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError:",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
